--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>face swap App</title>
+    <title>FakeFace Couple</title>
   </head>
   <body>
-    <h1>Baby Swap APP</h1>
+    <h1>FakeFace Couple APP</h1>
     <form method="POST" enctype="multipart/form-data">
-      <label for="src">Anh chong :</label>
+      <label for="src">Husband Image :</label>
       <input type="file" id="src" name="src"><br><br>
-      <label for="dst">Anh vo :</label>
+      <label for="dst">Wife Image :</label>
       <input type="file" id="dst" name="dst"><br><br>
-
-      <button type="submit">Swap faces</button>
+      <label for="from">Couple Image</label>
+      <input type="file" id="from" name="from"><br>
+      <br>
+      <button type="submit">Swap faces Couple</button>
 
     </form>
   </body>
